--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap');
+
 h1{
+  text-align: center;
+  font-family: 'Rubik Wet Paint', cursive;
+  font-size: 75px;
+}
+
+h2{
   text-align: center;
 }
