--- a/src/pages/products/Products.scss
+++ b/src/pages/products/Products.scss
@@ -6,5 +6,7 @@
         flex-direction: row;
         width: 100%;
         flex-wrap: wrap;
+        margin: 0 auto;
+        justify-content: space-around;
     }
 }
