--- a/src/components/navbar/NavBar.scss
+++ b/src/components/navbar/NavBar.scss
@@ -19,5 +19,10 @@
     .NavbarLink{
         text-decoration: none;
         color: black;
+        font-size: 1.5rem;
+    }
+    .NavbarLink:hover{
+        text-decoration: underline;
+        color: blue;
     }
 }
