--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    width: 99%;
+    padding : 10px;
+    margin: 0 auto;
 
     .LogoContainer{
         min-width: 130px;
@@ -32,5 +34,9 @@
         color : yellow;
         font-size: 18px;
         transform: rotateZ(-30deg);
+    }
+
+    h1{
+        color : rgb(255, 0, 0);
     }
 }
