adding css to buttons card

--- a/src/components/cards/Card.scss
+++ b/src/components/cards/Card.scss
@@ -32,6 +32,10 @@
         cursor: pointer;
     }
 
+    .Btn:active{
+        transform: scale(80%);
+    }
+
     .AddBtn{
         background-color: green;
     }
